--- a/index.html
+++ b/index.html
@@ -4,42 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Portfolio</title>
-    <link rel="stylesheet" type=“text/css” href="/site.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+
+        header p {
+            font-size: 18px;
+        }
+
+        .container {
+            flex: 1;
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .project {
+            margin-bottom: 20px;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        .project h2 {
+            margin: 0;
+            font-size: 24px;
+        }
+
+        .project p {
+            font-size: 16px;
+        }
+
+        #view-all-button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-<!-- Navigation Menu -->
-<nav>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <!-- Add more navigation links as needed -->
-    </ul>
-</nav>
-
-<!-- Home Section -->
-<section id="home">
+<header>
     <h1>Your Name</h1>
-    <p>Computer Science Student</p>
-    <p>Introduction and brief bio here...</p>
-    <!-- Add social media links and resume link here -->
-</section>
+    <p>Web Developer</p>
+</header>
 
-<!-- Projects Section -->
-<section id="projects">
-    <h2>Projects</h2>
+<div class="container">
+    <p>Hello! I'm a web developer passionate about creating awesome projects.</p>
+
+    <h2>My Projects</h2>
+
     <div class="project">
-        <img src="" alt="Project 1">
-        <h3>Project Title 1</h3>
-        <p>Description of Project 1...</p>
-        <!-- Link to project or GitHub repository -->
+        <h2>Project 1</h2>
+        <p>Description of Project 1 goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <a href="https://github.com/yourusername/project1" target="_blank">GitHub Repo</a>
     </div>
+
     <div class="project">
-        <img src="" alt="Project 2">
-        <h3>Project Title 2</h3>
-        <p>Description of Project 2...</p>
-        <!-- Link to project or GitHub repository -->
+        <h2>Project 2</h2>
+        <p>Description of Project 2 goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <a href="https://github.com/yourusername/project2" target="_blank">GitHub Repo</a>
     </div>
-    <!-- Add more projects as needed -->
-</section>
+
+    <!-- Add more project sections as needed -->
+
+    <a href="projects.html" id="view-all-button">View All Projects</a>
+</div>
+
+<footer>
+    &copy; 2023 Your Name
+</footer>
 </body>
 </html>
