--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 </head>
 <body>
 <header>
-    <h1>Your Name</h1>
-    <p>Web Developer</p>
+    <h1>Kobe Ponet</h1>
+    <p>Student applied computer science</p>
 </header>
 
 <div class="container">
-    <p>Hello! I'm a web developer passionate about creating awesome projects.</p>
+    <p>Hello! I'm a developer passionate about creating awesome projects.</p>
 
     <h2>My Projects</h2>
 
@@ -105,7 +105,7 @@
 </div>
 
 <footer>
-    &copy; 2023 Your Name
+    &copy; 2023 Kobe Ponet
 </footer>
 </body>
 </html>
